--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.43"
+async-trait = "0.1.51"
 base64 = "0.13.0"
 octocrab = "0.12.0"
 rand = "0.8.4"
