--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ octocrab = "0.12.0"
 rand = "0.8.4"
 reqwest = { version = "0.11.4", features = ["json"] }
 serde = "1.0.130"
-termion = "1.5.6"
+crossterm = "0.20"
 tokio = { version = "1.11.0", features = ["full"] }
-tui = "0.16.0"
+tui = {version = "0.16.0", default_features = false, features = ["crossterm"]}
+# xdg = "2.2.0"
+# termion = "1.5.6"
