--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ serde = "1.0.130"
 crossterm = "0.20"
 tokio = { version = "1.11.0", features = ["full"] }
 tui = {version = "0.16.0", default_features = false, features = ["crossterm"]}
+comfy-table = "4.1.1"
 # xdg = "2.2.0"
 # termion = "1.5.6"
