--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,21 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.43"
-async-trait = "0.1.51"
+anathema = {git= "https://github.com/togglebyte/anathema", features = ["flume"], rev="e4a223ff8d77ea8739bb002929925ba8694798fa"}
+anyhow = "1.0.61"
+async-trait = "0.1.57"
 base64 = "0.13.0"
-clap = { git = "https://github.com/modprog/clap", branch = "mychanges", features = ["wrap_help"] }
-clap_generate = { git = "https://github.com/modprog/clap", branch = "mychanges" }
-comfy-table = "4.1.1"
-crossterm = "0.20"
-octocrab = "0.12.0"
-rand = "0.8.4"
-reqwest = { version = "0.11.4", features = ["json"] }
-serde = "1.0.132"
-serde_yaml = "0.8.23"
-tokio = { version = "1.11.0", features = ["full"] }
-tui = {version = "0.16.0", default_features = false, features = ["crossterm"]}
+clap = { version = "3.2.17", features = ["wrap_help", "derive"] }
+comfy-table = "6.0.0"
+crossterm = "0.24.0"
+octocrab = "0.17.0"
+rand = "0.8.5"
+reqwest = { version = "0.11.11", features = ["json"] }
+serde = "1.0.143"
+serde_yaml = "0.9.9"
+tokio = { version = "1.20.1", features = ["full"] }
+# tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
+flume = "0.10.14"
+futures = "0.3.23"
 # xdg = "2.2.0"
 # termion = "1.5.6"
