--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anathema = {git= "https://github.com/togglebyte/anathema", features = ["flume"], rev="e4a223ff8d77ea8739bb002929925ba8694798fa"}
-# anathema = {git= "https://github.com/togglebyte/anathema", features = ["flume"]}
+anathema = {git= "https://github.com/togglebyte/anathema", features = ["flume"]}
 anyhow = "1.0.61"
 async-trait = "0.1.57"
 base64 = "0.13.0"
